# binomial_sum_variance_inequality

./: LICENSE  README.md  binomial_sum_variance_inequality.ipynb  pyproject.toml
